Fixed responsiveness and dark mode

--- a/src/css/sass/_sections.scss
+++ b/src/css/sass/_sections.scss
@@ -635,15 +635,6 @@
             gap: 0 50px;
             margin: 0 auto 90px;            
 
-            // @media only screen and (max-width: 1180px) {
-            //   gap: 0px 30px;
-            // }
-
-
-            // @media only screen and (max-width: 768px) {
-            //   gap: 0px 40px;
-            // }
-
             @media only screen and (max-width: 480px) {
               gap: 40px 0;
             }
@@ -775,7 +766,7 @@
                 .mz-overlap-wrap {
                   position: absolute;
                   top: 70%;
-                  left: calc(100% + (1920px- 100px));
+                  left: 305px;
                   transform: translateY(-70%);
                   background-color: #49230C;
                   width: calc(100% + (1920px / 2));
@@ -783,20 +774,20 @@
 
                   @media only screen and (max-width: 1180px) {
                     transform: translateY(-50%);
-                    // left: 170px;
+                    left: 170px;
                     // width: calc(100% + (1180px / 2));
                     padding: 35px 45px 45px;
                   }
 
                   @media only screen and (max-width: 768px) {
                     transform: translateY(-40%);
-                    // left: 100px;
+                    left: 100px;
                     padding: 25px 35px 35px;
                   }
 
                   @media only screen and (max-width: 480px) {
                     transform: translateY(-40%);
-                    // left: 90px;
+                    left: 90px;
                     padding: 25px 35px 35px;
                   }
 
@@ -864,15 +855,18 @@
           
           .mz-card-title {
               padding: 25px 30px;
-              height: 100%;
+              max-height: 75px;
               background-color: $nonary-color;
-              
+              height: 100%;
+
               @media only screen and (max-width: 768px) {     
                 padding: 15px 30px;
+                max-height: 51px;
               }
 
               @media only screen and (max-width: 480px) {
                 padding: 23px 30px;
+                max-height: 66px;
               }
 
               h3 {
@@ -886,7 +880,7 @@
                   margin: 0;
 
                   @media only screen and (max-width: 768px) {
-                    font-size: 18px;
+                    font-size: 20px;
                   }
               }
           }
@@ -926,12 +920,12 @@
                       text-transform: uppercase;
                       width: 100%;
                       max-width: 350px;
-
+                      color: $black-color;
                       @media only screen and (max-width: 768px) {
                         font-size: 12px;
                         padding: 5px 0px;
                       }
-                  } 
+                  
 
                   .mz-title {
                       color: $black-color;
@@ -957,6 +951,7 @@
 
             
                   }
+                } 
           }
       }
 
@@ -1198,8 +1193,7 @@
                       color: $white-color;
                   }
   
-                  .mz-program-curriculum {
-  
+
                       .mz-title {
                           color: $white-color;
                           font-weight: 700;
@@ -1213,7 +1207,8 @@
                           border-bottom: 1px solid rgba(175,172,180,0.4);
                           align-self: center;
                       }
-                  }
+
+
               }
           }
 
